truetandem/e-QIP-prototype#393 Style updates and fix some bugs in filtering gaps

--- a/src/components/Section/History/HistoryCollection/HistoryCollection.scss
+++ b/src/components/Section/History/HistoryCollection/HistoryCollection.scss
@@ -22,7 +22,12 @@
   }
 
   .caption {
+    padding-top: 0;
     padding-bottom: 0;
+
+    .title {
+      display: table-row;
+    }
   }
 
   .pre, .post {
@@ -32,6 +37,7 @@
 
     .help {
       padding-top: 0;
+      margin-bottom: 2rem;
 
       .message {
         width: 100%;
